Archive2/bc/f9c48bfa4105c7/output
main.cpp:3:11: error: 'time' does not name a type
     const time::steady_clock::TimePoint&
           ^
main.cpp:6:11: error: 'time' does not name a type
     const time::steady_clock::TimePoint&
           ^
main.cpp:9:5: error: 'time' does not name a type
     time::steady_clock::TimePoint IStime;
     ^
main.cpp:10:5: error: 'time' does not name a type
     time::steady_clock::TimePoint DRtime;
     ^
main.cpp:14:8: error: 'time' does not name a type
 inline time::steady_clock::TimePoint&
        ^
main.cpp:20:8: error: 'time' does not name a type
 inline time::steady_clock::TimePoint&
        ^
